# bot_finance

./: .gitignore  README.md  database.py  deploy_railway.sh  main.py  pyproject.toml  railway.json  requirements.txt  start.sh
models/: financas.py
routes/: routes.py
schemas/: financas.py
services/: bot_telegram.py  groq_client.py  twilio_service.py
