[project]
name = "app-finanças"
version = "0.1.0"
description = ""
authors = [
    {name = "neto"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn[standard] (>=0.46.0,<0.47.0)",
    "anthropic (>=0.101.0,<0.102.0)",
    "python-telegram-bot (>=22.7,<23.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "groq (>=1.2.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
